--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/Client Project/pdfmaker/linux"
+    "cmake.sourceDirectory": "D:/Client Project/pdfmaker/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
