--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   pdf: ^3.10.8
   bijoy_helper: ^1.0.1
   printing: ^5.12.0
+  bluetooth_print: ^4.3.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
